--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-
+<!--navbar-->
+<nav>
+    <ul>
+        <li><a href="index.html">Home</li>
+    </ul>
+</nav>
 </body>
 </html>
